tests/snapshots/snapshot_session_list__sections_group_sessions.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
   ○  alpha  1w               │                                                 
       claude · /tmp/work     │                         ▄                       
 ▌ 1 ▾ PREMIUM PRODUCTS  (2)  │   █▀▀█ █▀▀ █▀▀█ ▄▀▀█▀▀▄ ▄ █  █ ▄▀▀█▀▀▄  █▀▀█ █  
     ○  beta  1w              │   █  █ █   █▀▀▀ █  █  █ █ █  █ █  █  █  █  █ █  
         claude · /tmp/work   │   █▀▀▀ ▀   ▀▀▀▀ ▀  ▀  ▀ ▀ ▀▀▀▀ ▀  ▀  ▀  █▀▀▀ ▀  
     ○  gamma  1w  •attached  │                                                 
         claude · /tmp/work   │   font: opencode · f to cycle · 2 sessions      
                              │   ────────────────────────────────────────────  
                              │   ○  beta   claude   1w                         
                              │        /tmp/work                                
                              │   ○  gamma   claude   1w  •attached             
 bosun  v2.1.15 3 sessions↵ attach · n new · E edit · g group · 1-9 move · R ren
