tests/snapshots/snapshot_session_list__three_sessions_middle_selected.snap
---
source: tests/snapshot_session_list.rs
expression: frame
---
   ○  alpha  1w               │ ○ beta  +                                       
       claude · /tmp/work     │                                                 
 ▌ ○  beta  1w  •attached     │  preview: capturing…                            
       claude · /tmp/work     │                                                 
   ○  gamma  1w               │                                                 
       claude · /tmp/work     │                                                 
                              │                                                 
                              │                                                 
                              │                                                 
 bosun  v2.1.16 3 sessions↵ attach · n new · E edit · g group · 1-9 move · R ren
